# jakubwaleckicontactform

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  BLUEPRINT_REFACTOR.md  alembic.ini  app.py  cli.py  config.py  domain.csv  example_domain.csv  example_site.txt  example_usage.py  googlesearch.py  huey_config.py  main.py  models.py  pyproject.toml  pywrighttemp.py  readme.md  readme.txt  seleniumtemp.py  start.bat  start.sh  start_consumer.bat  stop.bat  stop.sh  test_domain_validation.py  test_domains.csv  test_form_submission_task.py  test_setup.py  test_submission_config.py  test_task_id.py  todo.txt
alembic/: env.py
alembic/versions/: 210b12fd65e1_remove_unused_column.py  51ce05410cb0_update_form_url_to_nullable.py  52de138d7ed5_add_task_id_and_task_status_to_form_.py  7a553902364a_initial_migration.py  8de95a752a5e_initial_migration_create_.py  97fe90a3a82e_add_submitted_date_to_mission.py  b06b108b9a25_add_task_id_to_contact_form_detection.py  d22b25234ad6_mission_and_insertion_table.py
app/: app.py
app/blueprints/: __init__.py  config.py  forms.py  huey.py  huey_fixed.py  mission.py  submission.py
app/static/: style.css
app/templates/: base.html  config.html  (+7 more)
archive/: README_web_scraper.md  example_usage.py  googlesearch.py  main.py  web_scraper.py
database/: __init__.py  models.py
gpt/: __init__.py  gemini.py
helper/: __init__.py
huey_config/: __init__.py
static/: style.css
templates/: base.html  config.html  create_mission.html  missing_forms.html  mission_list.html  submission_config.html  submission_process.html
(+24 files in other folders)
