[project]
name = "contactform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "beautifulsoup4>=4.13.4",
    "chromedriver-autoinstaller>=0.6.4",
    "google-api-python-client>=2.177.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.42",
]
